--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ reqwest = { version = "0.11", features = ["json", "stream"] }
 futures-util = "0.3"
 zip = "0.6"
 chrono = "0.4"
+colored = "3.0.0"
